Toggle display rather than visibility to avoid pointer issues.

--- a/src/tags/framework/debugger/style.css
+++ b/src/tags/framework/debugger/style.css
@@ -49,10 +49,9 @@
   z-index: 2147483648;
   background: rgba(0, 0, 0, 0.5);
   padding: 20px;
-  display: flex;
+  display: none;
   align-items: center;
   justify-content: center;
-  visibility: hidden;
 }
 
 .__tagsmith_debugger_popup {
